5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1675_2471.log
== TEST (2019-05-01 12:18:30) 
-- CODE:
a = int(input("Idade:"))
b = float(input("Indice de massa corporal:"))
print("Entradas: ", a, "anos e IMC ", b)
if (a<=0) and (a=>130):
	print("Dados invalidos")
elif (b<22.0)and(a<45):
	print("Risco: Baixo")
elif (b<22.0)and (a>=45):
	print("Risco: Medio")
elif (b>=22.0)and (a<45):
	print("Risco: Medio")
elif (b>=22.0)and(a>=45):
	print("Risco: Alto")
-- ERROR:
File "XXXX", line 4
    if (a<=0) and (a=>130):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:21:03) 
-- CODE:
a = int(input("Idade:"))
b = float(input("Indice de massa corporal:"))
print("Entradas: ", a, "anos e IMC ", b)
if (a<=0) and (a>=130):
	print("Dados invalidos")
elif (b<22.0)and(a<45):
	print("Risco: Baixo")
elif (b<22.0)and (a>=45):
	print("Risco: Medio")
elif (b>=22.0)and (a<45):
	print("Risco: Medio")
elif (b>=22.0)and(a>=45):
	print("Risco: Alto")
-- OUTPUT:
Entradas:  0 anos e IMC  0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 12:21:27) 
-- CODE:
a = int(input("Idade:"))
b = float(input("Indice de massa corporal:"))
print("Entradas: ", a, "anos e IMC ", b)
if (a<=0) and (a>=130):
	print("Dados invalidos")
elif (b<22.0)and(a<45):
	print("Risco: Baixo")
elif (b<22.0)and (a>=45):
	print("Risco: Medio")
elif (b>=22.0)and (a<45):
	print("Risco: Medio")
elif (b>=22.0)and(a>=45):
	print("Risco: Alto")
-- EXECUTION TIME:
0.287853
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0 anos e IMC  0.0
Risco: Baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25 anos e IMC  25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50 anos e IMC  25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:26:29) 
-- CODE:
a = int(input("Idade:"))
b = float(input("Indice de massa corporal:"))
print("Entradas: ", a, "anos e IMC ", b)
if (a<=0) and (a>=130):
	print("Dados invalidos")
elif (b<22.0)and(a<45):
	print("Risco: Baixo")
elif (b<22.0)and (a>=45):
	print("Risco: Medio")
elif (b>=22.0)and (a<45):
	print("Risco: Medio")
elif (b>=22.0)and(a>=45):
	print("Risco: Alto")
-- OUTPUT:
Entradas:  0 anos e IMC  0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:28:40) 
-- CODE:
a = int(input("Idade:"))
b = float(input("Indice de massa corporal:"))
print("Entradas: ", a, "anos e IMC ", b)
if ((a<=0)and(a>=130))or(b<=0):
	print("Dados invalidos")
elif (b<22.0)and(a<45):
	print("Risco: Baixo")
elif (b<22.0)and (a>=45):
	print("Risco: Medio")
elif (b>=22.0)and (a<45):
	print("Risco: Medio")
elif (b>=22.0)and(a>=45):
	print("Risco: Alto")
-- OUTPUT:
Entradas:  0 anos e IMC  0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 12:29:00) 
-- CODE:
a = int(input("Idade:"))
b = float(input("Indice de massa corporal:"))
print("Entradas: ", a, "anos e IMC ", b)
if ((a<=0)and(a>=130))or(b<=0):
	print("Dados invalidos")
elif (b<22.0)and(a<45):
	print("Risco: Baixo")
elif (b<22.0)and (a>=45):
	print("Risco: Medio")
elif (b>=22.0)and (a<45):
	print("Risco: Medio")
elif (b>=22.0)and(a>=45):
	print("Risco: Alto")
-- EXECUTION TIME:
0.144576
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0 anos e IMC  0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25 anos e IMC  25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50 anos e IMC  25.0
Risco: Alto
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
